Alterando em Dev

--- a/index.html
+++ b/index.html
@@ -11,32 +11,12 @@
 </head>
 <body>
 
-    <header class="header">
-        <nav>
-            <ul class="menu menu-navegacao">
-                <li><a href="#">Estudos de caso</a></li>
-                <li><a href="#">Trabalhos</a></li>
-                <li><a href="#">Entre em contato</a></li>
-            </ul>
-            <ul class="menu menu-social">
-                <li>
-                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                </li>
-                <li>
-                    <a href="#"><i class="fa-brands fa-behance"></i></a>
-                </li>
-                <li>
-                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                </li>
-            </ul>
-        </nav>
-    </header>
 
     <main>
 
         <section class="container">
             <div class="left">
-                <h1>Bruno Nakamura</h1>
+                <h1>Cesimar Xavier</h1>
                 <h3>UX / Dev Front-end</h3>
                 <p>Sou um híbrido raro: Design Systems + Engenharia de Produto. Entrego de ponta a ponta — da descoberta à produção — com métricas de negócio na cabeceira e DX/UX no detalhe. Tradução simultânea entre PMs, Design, Front, Back e Data. Sem teatrinho: shippo, meço, repito.</p>
                 <button>
