meu primeiro commit

--- a/index.html
+++ b/index.html
@@ -54,11 +54,9 @@
                 <div class="text">
                     <h1>Bruno Nakamura</h1>
                     <h3>UX e Dev Front-end</h3>
-                    <p>Sou um híbrido raro: Design Systems + Engenharia de Produto. Entrego de ponta a ponta — da
-                        descoberta
-                        à produção — com métricas de negócio na cabeceira e DX/UX no detalhe. Tradução simultânea entre
-                        PMs,
-                        Design, Front, Back e Data. Sem teatrinho: shippo, meço, repito.
+                    <p>Sou um híbrido raro: Design Systems + Engenharia de Produto.<br>Entrego de ponta a ponta — da
+                        descoberta à produção — com métricas<br>de negócio na cabeceira e DX/UX no detalhe. Tradução
+                        simultânea<br>entre PMs, Design, Front, Back e Data. Sem teatrinho: shippo, meço,<br>repito.
                     </p>
                 </div>
                 <button>
