--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil</title>
+    <title>Meu Portifólio Pessoal</title>
 
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -52,29 +52,29 @@
         <section class="container">
             <div class="left">
                 <div class="text">
-                    <h1>Bruno Nakamura</h1>
-                    <h3>UX e Dev Front-end</h3>
-                    <p>Sou um híbrido raro: Design Systems + Engenharia de Produto.<br>Entrego de ponta a ponta — da
-                        descoberta à produção — com métricas<br>de negócio na cabeceira e DX/UX no detalhe. Tradução
-                        simultânea<br>entre PMs, Design, Front, Back e Data. Sem teatrinho: shippo, meço,<br>repito.
+                    <h1>Thaylanne Kérrinna</h1>
+                    <h3>Estudante</h3>
+                    <p>Sou estudante de Informática para Internet e gosto de aprender através da prática. Busco explorar novas
+                        ideias e desenvolver projetos que tragam resultados concretos. Sempre que possível, aplico o que
+                        aprendo para melhorar processos e soluções.
                     </p>
                 </div>
-                <button>
+                <button class="btn">
                     Vamos trabalhar juntos <i class="fa-solid fa-chevron-right"></i>
                 </button>
             </div>
             <figure class="right">
-                <img src="assets/img/photo.png" alt="Foto do Brno Nakamura">
+                <img src="assets/img/photo.png" alt="Foto do Bruno Nakamura">
             </figure>
         </section>
         <section class="container last-jobs">
             <h5>Trabalhou em:</h5>
             <ul class="job-list">
-                <li><img src="assets/img/img-job-1.svg" alt=""></li>
-                <li><img src="assets/img/img-job-2.svg" alt=""></li>
-                <li><img src="assets/img/img-job-3.svg" alt=""></li>
-                <li><img src="assets/img/img-job-4.svg" alt=""></li>
-                <li><img src="assets/img/img-job-5.svg" alt=""></li>
+                <li><img src="assets/img/img-job-1.svg" alt="Logo ClickUp"></li>
+                <li><img src="assets/img/img-job-2.svg" alt="Logo Dropbox"></li>
+                <li><img src="assets/img/img-job-3.svg" alt="Logo Paychex"></li>
+                <li><img src="assets/img/img-job-4.svg" alt="Logo Elastic"></li>
+                <li><img src="assets/img/img-job-5.svg" alt="Logo Stripe"></li>
             </ul>
         </section>
     </main>
