--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     <header class="header">
         <nav class="container dividir-extremidades">
             <ul class="menu menu-navegacao display-flex lista-sem-estilo">
-                <li><a href="#">Estudos de caso</a></li>
-                <li><a href="#">Trabalhos</a></li>
-                <li><a href="#">Entre em contato</a></li>
+                <li><a class="link" href="#">Estudos de caso</a></li>
+                <li><a class="link" href="#">Trabalhos</a></li>
+                <li><a class="link" href="#">Entre em contato</a></li>
             </ul>
             <ul class="menu menu-social display-flex lista-sem-estilo">
                 <li>
-                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a class="link" href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                 </li>
                 <li>
-                    <a href="#"><i class="fa-brands fa-behance"></i></a>
+                    <a class="link" href="#"><i class="fa-brands fa-behance"></i></a>
                 </li>
                 <li>
-                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a class="link" href="#"><i class="fa-brands fa-twitter"></i></a>
                 </li>
             </ul>
         </nav>
@@ -37,15 +37,15 @@
 
         <section class="container">
             <div class="perfil">
-                <h1>Bruno Nakamura</h1>
-                <h3>UX / Dev Front-end</h3>
-                <p>Sou um híbrido raro: Design Systems + Engenharia de Produto. Entrego de ponta a ponta — da descoberta à produção — com métricas de negócio na cabeceira e DX/UX no detalhe. Tradução simultânea entre PMs, Design, Front, Back e Data. Sem teatrinho: shippo, meço, repito.</p>
+                <h1>Pedro Gabriel</h1>
+                <h3>Estudante / Dev Front-end</h3>
+                <p>Sou um jovem programador que busca aprender cada vez mais, sempre buscando superar as dificuldades. Possuo conhecimento básico em HTML, CSS e Java Script, e um mais avançado em manutenção de hardwares, além do inglês intermediário/avançado que adquiri ao longo da vida.</p>
                 <button>
                     Vamos trabalhar juntos <i class="fa-solid fa-chevron-right"></i></i>
                 </button>
             </div>
             <figure class="foto">
-                <img src="assets/img/perfil.png" alt="Foto do Bruno Nakamura">
+                <img src="assets/img/pedrofil.png" alt="Foto de Pedro Gabriel">
             </figure>
         </section>
         <section class="container alinhar-coluna last-jobs">
