ajeitando algumas coisas da responsividade antes de colocar em em arquivo separado

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <header>
         <button id="menu-btn" onclick="menushow()">
             <i class="fa-solid fa-bars"></i>
+            <span>Menu</span>
         </button>
         <nav class="small-menu">
             <a href="#">Estudos de Casos</a>
