Atividade com responsividade

--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
                     </a>
                 </li>
             </ul>
+            <div class="hamburger-menu">
+                <div class="hamburger-line"></div>
+                <div class="hamburger-line"></div>
+                <div class="hamburger-line"></div>
+                <span class="hamburger-text">Menu</span>
+            </div>
         </nav>
     </header>
 
